--- a/login site.html
+++ b/login site.html
@@ -61,14 +61,18 @@
             <div class="p-8">
                 <!-- Social Login Buttons -->
                 <div class="flex space-x-4 mb-6">
-                    <button class="flex-1 py-2 rounded-lg border border-gray-200 hover:shadow-md transition-all flex items-center justify-center bg-white text-gray-700 hover:bg-gray-50">
-                        <i class="fab fa-google text-red-500 mr-2"></i>
-                        Google
-                    </button>
-                    <button class="flex-1 py-2 rounded-lg border border-gray-200 hover:shadow-md transition-all flex items-center justify-center bg-white text-gray-700 hover:bg-gray-50">
-                        <i class="fab fa-github text-gray-800 mr-2"></i>
-                        GitHub
-                    </button>
+                    <a href="https://accounts.google.com/signin" target="_blank" class="flex-1">
+                        <button class="py-2 rounded-lg border border-gray-200 hover:shadow-md transition-all flex items-center justify-center bg-white text-gray-700 hover:bg-gray-50">
+                            <i class="fab fa-google text-red-500 mr-2"></i>
+                            Google
+                        </button>
+                    </a>
+                    <a href="https://github.com/login" target="_blank" class="flex-1">
+                        <button class="py-2 rounded-lg border border-gray-200 hover:shadow-md transition-all flex items-center justify-center bg-white text-gray-700 hover:bg-gray-50">
+                            <i class="fab fa-github text-gray-800 mr-2"></i>
+                            GitHub
+                        </button>
+                    </a>
                 </div>
                 
                 <div class="relative flex items-center py-4">
@@ -172,8 +176,8 @@
                     btn.innerHTML = '<i class="fas fa-check-circle mr-2"></i> Success! Redirecting...';
                     setTimeout(() => {
                         alert('Login successful! Welcome to your dashboard.');
-                        // Redirect would happen here
-                        // window.location.href = '/dashboard';
+                        // Redirect to the desired website
+                        window.location.href = 'https://raw.githack.com/shisui04-rgb/Sign-in-webpage/refs/heads/main/login%20site.html'; // Replace with your desired URL
                     }, 1000);
                 } else {
                     // Failed login
