login site.html

--- a/login site.html
+++ b/login site.html
@@ -176,7 +176,7 @@
                     btn.innerHTML = '<i class="fas fa-check-circle mr-2"></i> Success! Redirecting...';
                     setTimeout(() => {
                         // Redirect would happen here
-                        window.location.href = 'https://summer.hackclub.com/'; // Uncomment this line
+                        window.location.href = 'https://summer.hackclub.com/';
                     }, 1000);
                 } else {
                     // Failed login
@@ -201,3 +201,4 @@
     </script>
 </body>
 </html>
+
