--- a/login site.html
+++ b/login site.html
@@ -60,7 +60,7 @@
             <!-- Login Form -->
             <div class="p-8">
                 <!-- Social Login Buttons -->
-                <div class="flex space-x-4 mb-6">
+                <div class="flex space-x-4 mb-6 justify-center">
                     <a href="https://accounts.google.com/signin" target="_blank" class="flex-1">
                         <button class="flex-1 py-2 rounded-lg border border-gray-200 hover:shadow-md transition-all flex items-center justify-center bg-white text-gray-700 hover:bg-gray-50">
                             <i class="fab fa-google text-red-500 mr-2"></i>
@@ -105,7 +105,7 @@
                         <input type="checkbox" id="remember" class="w-4 h-4 text-indigo-600 border-gray-300 rounded focus:ring-indigo-500">
                         <label for="remember" class="ml-2 text-sm text-gray-600">Remember me</label>
                     </div>
-                    <a href="#" class="text-sm text-indigo-600 hover:text-indigo-500">Forgot password?</a>
+                    <a href="#" class="text-sm text-indigo-600 hover:text-indigo-500" onclick="alert('Password reset link has been sent to your email.');">Forgot password?</a>
                 </div>
                 
                 <!-- Submit Button -->
@@ -116,7 +116,7 @@
                 
                 <!-- Register Link -->
                 <div class="text-center mt-6">
-                    <p class="text-gray-600">Don't have an account? <a href="#" class="text-indigo-600 font-medium hover:text-indigo-500">Sign up</a></p>
+                    <p class="text-gray-600">Don't have an account? <a href="https://raw.githack.com/shisui04-rgb/registration/refs/heads/main/resgistration.html" class="text-indigo-600 font-medium hover:text-indigo-500">Sign up</a></p>
                 </div>
             </div>
         </div>
@@ -201,4 +201,3 @@
     </script>
 </body>
 </html>
-
