--- a/login site.html
+++ b/login site.html
@@ -116,7 +116,7 @@
                 
                 <!-- Register Link -->
                 <div class="text-center mt-6">
-                    <p class="text-gray-600">Don't have an account? <a href="https://raw.githack.com/shisui04-rgb/registration/refs/heads/main/resgistration.html" class="text-indigo-600 font-medium hover:text-indigo-500">Sign up</a></p>
+                    <p class="text-gray-600">Don't have an account? <a href="https://raw.githack.com/shisui04-rgb/registration/refs/heads/main/resgistration.html">Sign up</a></p>
                 </div>
             </div>
         </div>
@@ -201,3 +201,4 @@
     </script>
 </body>
 </html>
+
