--- a/login site.html
+++ b/login site.html
@@ -61,7 +61,7 @@
             <div class="p-8">
                 <!-- Social Login Buttons -->
                 <div class="flex space-x-4 mb-6 justify-center">
-                    <a href="https://accounts.google.com/signin" target="_blank" class="flex-1">
+                    <a href="https://accounts.google.com/signin/oauth/error/v2?authError=Cg9pbnZhbGlkX3JlcXVlc3QSLFJlcXVpcmVkIHBhcmFtZXRlciBpcyBtaXNzaW5nOiByZXNwb25zZV90eXBlGjdodHRwczovL2RldmVsb3BlcnMuZ29vZ2xlLmNvbS9pZGVudGl0eS9wcm90b2NvbHMvb2F1dGgyIJAD&flowName=GeneralOAuthFlow" target="_blank" class="flex-1">
                         <button class="flex-1 py-2 rounded-lg border border-gray-200 hover:shadow-md transition-all flex items-center justify-center bg-white text-gray-700 hover:bg-gray-50">
                             <i class="fab fa-google text-red-500 mr-2"></i>
                             Google
@@ -201,6 +201,7 @@
     </script>
 </body>
 </html>
+
 
 
 
