--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="p-8">
                 <!-- Social Login Buttons -->
                 <div class="flex space-x-4 mb-6 justify-center">
-                    <a href="https://www.googleapis.com/oauth2/v1/certs" target="_blank" class="flex-1">
+                    <a href="https://accounts.google.com/o/oauth2/auth" target="_blank" class="flex-1">
                         <button class="flex-1 py-2 rounded-lg border border-gray-200 hover:shadow-md transition-all flex items-center justify-center bg-white text-gray-700 hover:bg-gray-50">
                             <i class="fab fa-google text-red-500 mr-2"></i>
                             Google
@@ -201,6 +201,7 @@
     </script>
 </body>
 </html>
+
 
 
 
