--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 if (email === 'demo@example.com' && password === 'demo123') {
                     btn.innerHTML = '<i class="fas fa-check-circle mr-2"></i> Success! Redirecting...';
                     setTimeout(() => {
-                        window.location.href = 'https://raw.githack.com/shisui04-rgb/galaxy/refs/heads/main/Galaxy.html';
+                        window.location.href = 'https://whole-galaxy.netlify.app/';
                     }, 1000);
                 } else {
                     btn.innerHTML = originalText;
@@ -234,3 +234,4 @@
     </script>
 </body>
 </html>
+
