--- a/login site.html
+++ b/login site.html
@@ -176,7 +176,7 @@
                     btn.innerHTML = '<i class="fas fa-check-circle mr-2"></i> Success! Redirecting...';
                     setTimeout(() => {
                         // Redirect would happen here
-                        window.location.href = 'https://raw.githack.com/shisui04-rgb/galaxy/refs/heads/main/Galaxy.html';
+                        window.location.href = 'https://whole-galaxy.netlify.app/';
                     }, 1000);
                 } else {
                     // Failed login
@@ -201,6 +201,7 @@
     </script>
 </body>
 </html>
+
 
 
 
