--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Nexus Login</title>
 
     <!-- Fonts & Icons -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -69,31 +69,30 @@
             <div class="p-8">
                 <!-- Social Logins -->
                 <div class="flex space-x-4 mb-6 justify-center items-center">
-                <!-- Google Sign-In -->
-                <div id="g_id_onload"
-                    data-client_id="1090199939189-b0shb8l5i4o086j8s9p4nk6ptrpe2b9p.apps.googleusercontent.com"
-                    data-context="signin"
-                    data-ux_mode="popup"
-                    data-callback="handleGoogleCallback"
-                    data-auto_prompt="false">
-                </div>
+                    <!-- Google Sign-In -->
+                    <div id="g_id_onload"
+                        data-client_id="1090199939189-b0shb8l5i4o086j8s9p4nk6ptrpe2b9p.apps.googleusercontent.com"
+                        data-context="signin"
+                        data-ux_mode="popup"
+                        data-callback="handleGoogleCallback"
+                        data-auto_prompt="false">
+                    </div>
 
-            <div class="g_id_signin flex-1"
-                data-type="standard"
-                data-shape="rectangular"
-                data-theme="outline"
-                data-text="signin_with"
-                data-size="large"
-                data-logo_alignment="left">
-            </div>
-
+                    <div class="g_id_signin flex-1"
+                        data-type="standard"
+                        data-shape="rectangular"
+                        data-theme="outline"
+                        data-text="signin_with"
+                        data-size="large"
+                        data-logo_alignment="left">
+                    </div>
 
                     <!-- GitHub Login -->
-                    <a href="https://github.com/login" target="_blank" class="flex-1">
-                        <button class="flex-1 py-2 rounded-lg border border-gray-200 hover:shadow-md transition-all flex items-center justify-center bg-white text-gray-700 hover:bg-gray-50">
-                            <i class="fab fa-github text-gray-800 mr-2"></i>
-                            GitHub
-                        </button>
+                    <a href="https://github.com/login/oauth/authorize?client_id=Ov23liuAVGzCm3Wgsz7E&scope=read:user user:email" 
+                        id="github-login-btn"
+                        class="flex-1 py-2 rounded-lg border border-gray-200 hover:shadow-md transition-all flex items-center justify-center bg-white text-gray-700 hover:bg-gray-50">
+                        <i class="fab fa-github text-gray-800 mr-2"></i>
+                        GitHub
                     </a>
                 </div>
 
@@ -106,7 +105,7 @@
 
                 <!-- Email -->
                 <div class="relative mt-4">
-                    <input type="email" id="email" placeholder=" " class="input-field w-full py-3 px-4 border border-gray-200 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 outline-none transition">
+                    <input type="email" id="email" placeholder=" " class="input-field w-full py-3 px-4 border border-gray-200 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 outline-none transition" />
                     <label class="floating-label">Email Address</label>
                     <div class="absolute right-3 top-3 text-gray-400">
                         <i class="fas fa-envelope"></i>
@@ -115,7 +114,7 @@
 
                 <!-- Password -->
                 <div class="relative mt-6">
-                    <input type="password" id="password" placeholder=" " class="input-field w-full py-3 px-4 border border-gray-200 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 outline-none transition">
+                    <input type="password" id="password" placeholder=" " class="input-field w-full py-3 px-4 border border-gray-200 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 outline-none transition" />
                     <label class="floating-label">Password</label>
                     <div class="absolute right-3 top-3 text-gray-400 cursor-pointer" onclick="togglePasswordVisibility()">
                         <i class="fas fa-eye-slash"></i>
@@ -125,7 +124,7 @@
                 <!-- Remember Me / Forgot -->
                 <div class="flex items-center justify-between mt-6">
                     <div class="flex items-center">
-                        <input type="checkbox" id="remember" class="w-4 h-4 text-indigo-600 border-gray-300 rounded focus:ring-indigo-500">
+                        <input type="checkbox" id="remember" class="w-4 h-4 text-indigo-600 border-gray-300 rounded focus:ring-indigo-500" />
                         <label for="remember" class="ml-2 text-sm text-gray-600">Remember me</label>
                     </div>
                     <a href="#" class="text-sm text-indigo-600 hover:text-indigo-500" onclick="alert('Password reset link has been sent to your email.');">Forgot password?</a>
@@ -167,7 +166,7 @@
     <script>
         function togglePasswordVisibility() {
             const passwordInput = document.getElementById('password');
-            const eyeIcon = document.querySelector('#password + .floating-label + div i');
+            const eyeIcon = document.querySelector('#password ~ div i');  // Fixed selector
 
             if (passwordInput.type === 'password') {
                 passwordInput.type = 'text';
@@ -196,7 +195,7 @@
                 if (email === 'demo@example.com' && password === 'demo123') {
                     btn.innerHTML = '<i class="fas fa-check-circle mr-2"></i> Success! Redirecting...';
                     setTimeout(() => {
-                        window.location.href = 'https://whole-galaxy.netlify.app/';
+                        window.location.href = 'https://raw.githack.com/shisui04-rgb/galaxy/refs/heads/main/Galaxy.html';
                     }, 1000);
                 } else {
                     btn.innerHTML = originalText;
@@ -209,7 +208,7 @@
         function handleGoogleCallback(response) {
             const userObject = parseJwt(response.credential);
             console.log("Google User:", userObject);
-            alert(`Welcome, ${userObject.name}`);
+            alert(`Welcome, ${userObject.name || userObject.email || 'User'}`);
             window.location.href = 'https://raw.githack.com/shisui04-rgb/galaxy/refs/heads/main/Galaxy.html';
         }
 
@@ -219,19 +218,6 @@
                 '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2)).join(''));
             return JSON.parse(base64);
         }
-
-        // Floating Label helper (not strictly necessary with placeholder="")
-        document.querySelectorAll('.input-field').forEach(input => {
-            input.addEventListener('input', function () {
-                const label = this.nextElementSibling;
-                if (this.value.trim() !== '') {
-                    label.classList.add('active');
-                } else {
-                    label.classList.remove('active');
-                }
-            });
-        });
     </script>
 </body>
 </html>
-
