--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Nexus Login</title>
 
@@ -13,59 +13,211 @@
   <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- Google Sign-In SDK -->
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
-</head>
-<body class="min-h-screen flex items-center justify-center p-4 bg-gray-100">
-  <div class="w-full max-w-md bg-white rounded-xl shadow-2xl overflow-hidden">
-    
-    <!-- Header -->
-    <div class="bg-gradient-to-r from-blue-500 to-green-500 p-6 text-center">
-      <h1 class="text-2xl font-bold text-white">Welcome Back</h1>
-      <p class="text-indigo-100 mt-2">Sign in with Gmail to continue</p>
-    </div>
+  <script src="https://accounts.google.com/gsi/client"></script>
 
-    <!-- Google Sign-In -->
-    <div class="p-8 text-center">
-      <div id="g_id_onload"
-        data-client_id="YOUR_GOOGLE_CLIENT_ID.apps.googleusercontent.com"
-        data-context="signin"
-        data-ux_mode="popup"
-        data-callback="handleGoogleCallback"
-        data-auto_prompt="false">
+  <style>
+    :root {
+      --primary: #6366f1;
+      --primary-dark: #4f46e5;
+      --secondary: #f43f5e;
+      --dark: #1e293b;
+      --light: #f8fafc;
+    }
+
+    body {
+      font-family: 'Poppins', sans-serif;
+      background-color: #f1f5f9;
+    }
+
+    .bg-glass {
+      background: rgba(255, 255, 255, 0.2);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+      border: 1px solid rgba(255, 255, 255, 0.18);
+    }
+
+    .floating-label {
+      position: absolute;
+      pointer-events: none;
+      left: 12px;
+      top: 16px;
+      transition: 0.2s ease all;
+      color: #64748b;
+    }
+
+    .input-field:focus ~ .floating-label,
+    .input-field:not(:placeholder-shown) ~ .floating-label {
+      top: -10px;
+      left: 10px;
+      font-size: 12px;
+      background: white;
+      padding: 0 5px;
+      color: var(--primary);
+    }
+  </style>
+</head>
+<body class="min-h-screen flex items-center justify-center p-4">
+  <div class="w-full max-w-md">
+    <div class="bg-white rounded-xl shadow-2xl overflow-hidden">
+      
+      <!-- Header -->
+      <div class="bg-gradient-to-r from-blue-500 to-green-500 p-6 text-center">
+        <h1 class="text-2xl font-bold text-white">Welcome Back</h1>
+        <p class="text-indigo-100 mt-2">Sign in to access your dashboard</p>
       </div>
 
-      <div class="g_id_signin"
-        data-type="standard"
-        data-shape="rectangular"
-        data-theme="outline"
-        data-text="signin_with"
-        data-size="large"
-        data-logo_alignment="left">
+      <!-- Form Section -->
+      <div class="p-8">
+        <form onsubmit="handleLogin(event)">
+          <!-- Google Sign-In -->
+          <div class="flex justify-center mb-6">
+            <div id="g_id_onload"
+              data-client_id="1090199939189-b0shb8l5i4o086j8s9p4nk6ptrpe2b9p.apps.googleusercontent.com"
+              data-context="signin"
+              data-ux_mode="popup"
+              data-callback="handleGoogleCallback"
+              data-auto_prompt="false">
+            </div>
+
+            <div class="g_id_signin"
+              data-type="standard"
+              data-shape="rectangular"
+              data-theme="outline"
+              data-text="signin_with"
+              data-size="large"
+              data-logo_alignment="left">
+            </div>
+          </div>
+
+          <!-- Divider -->
+          <div class="relative flex items-center py-4">
+            <div class="flex-grow border-t border-gray-200"></div>
+            <span class="flex-shrink mx-4 text-gray-400">OR</span>
+            <div class="flex-grow border-t border-gray-200"></div>
+          </div>
+
+          <!-- Email -->
+          <div class="relative mt-4">
+            <input type="email" id="email" name="email" required placeholder=" " class="input-field w-full py-3 px-4 border border-gray-200 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 outline-none transition" />
+            <label for="email" class="floating-label">Email Address</label>
+            <div class="absolute right-3 top-3 text-gray-400">
+              <i class="fas fa-envelope"></i>
+            </div>
+          </div>
+
+          <!-- Password -->
+          <div class="relative mt-6">
+            <input type="password" id="password" name="password" required placeholder=" " class="input-field w-full py-3 px-4 border border-gray-200 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 outline-none transition" />
+            <label for="password" class="floating-label">Password</label>
+            <div class="absolute right-3 top-3 text-gray-400 cursor-pointer" onclick="togglePasswordVisibility()">
+              <i id="toggle-icon" class="fas fa-eye-slash"></i>
+            </div>
+          </div>
+
+          <!-- Remember Me / Forgot -->
+          <div class="flex items-center justify-between mt-6">
+            <div class="flex items-center">
+              <input type="checkbox" id="remember" class="w-4 h-4 text-indigo-600 border-gray-300 rounded focus:ring-indigo-500">
+              <label for="remember" class="ml-2 text-sm text-gray-600">Remember me</label>
+            </div>
+            <a href="#" class="text-sm text-indigo-600 hover:text-indigo-500" onclick="alert('Password reset link has been sent to your email.');">Forgot password?</a>
+          </div>
+
+          <!-- Login Button -->
+          <button type="submit" class="w-full mt-6 py-3 px-4 bg-gradient-to-r from-blue-500 to-green-500 hover:from-indigo-600 hover:to-pink-600 text-white font-medium rounded-lg shadow-lg hover:shadow-xl transition-all duration-300 flex items-center justify-center">
+            Sign In <i class="fas fa-arrow-right ml-2"></i>
+          </button>
+        </form>
+
+        <!-- Register -->
+        <div class="text-center mt-6">
+          <p class="text-gray-600">Don't have an account?
+            <a href="https://registration-site.netlify.app/" class="text-indigo-600 font-medium hover:text-indigo-500">Sign up</a>
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Demo Credentials -->
+    <div class="bg-yellow-50 border-l-4 border-yellow-400 p-4 mt-6 rounded-lg">
+      <div class="flex">
+        <div class="flex-shrink-0">
+          <i class="fas fa-info-circle text-yellow-400"></i>
+        </div>
+        <div class="ml-3">
+          <h3 class="text-sm text-blue-600 font-medium">Demo credentials</h3>
+          <div class="mt-1 text-sm text-blue-600">
+            <p>Email: demo@example.com</p>
+            <p>Password: demo123</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 
   <!-- Scripts -->
   <script>
-    // Google callback after login
+    function togglePasswordVisibility() {
+      const passwordInput = document.getElementById('password');
+      const icon = document.getElementById('toggle-icon');
+      if (passwordInput.type === 'password') {
+        passwordInput.type = 'text';
+        icon.classList.replace('fa-eye-slash', 'fa-eye');
+      } else {
+        passwordInput.type = 'password';
+        icon.classList.replace('fa-eye', 'fa-eye-slash');
+      }
+    }
+
+    function handleLogin(event) {
+      event.preventDefault();
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
+      const btn = event.target.querySelector('button[type="submit"]');
+      const originalText = btn.innerHTML;
+
+      if (!email || !password) {
+        alert('Please fill in all fields');
+        return;
+      }
+
+      btn.innerHTML = '<i class="fas fa-spinner fa-spin mr-2"></i> Authenticating...';
+      btn.disabled = true;
+
+      setTimeout(() => {
+        if (email === 'demo@example.com' && password === 'demo123') {
+          btn.innerHTML = '<i class="fas fa-check-circle mr-2"></i> Success! Redirecting...';
+          setTimeout(() => {
+            window.location.href = 'https://raw.githack.com/shisui04-rgb/galaxy/refs/heads/main/Galaxy.html';
+          }, 1000);
+        } else {
+          btn.innerHTML = originalText;
+          btn.disabled = false;
+          alert('Invalid credentials. Please try again.');
+        }
+      }, 1500);
+    }
+
     function handleGoogleCallback(response) {
       const userObject = parseJwt(response.credential);
       console.log("Google User:", userObject);
-
-      // Show welcome message
-      alert(`Welcome, ${userObject.name} (${userObject.email})`);
-
-      // Redirect after login
-      window.location.href = "https://raw.githack.com/shisui04-rgb/galaxy/refs/heads/main/Galaxy.html";
+      alert(`Welcome, ${userObject.name}`);
+        window.location.href = 'https://raw.githack.com/shisui04-rgb/galaxy/refs/heads/main/Galaxy.html';
     }
 
-    // Decode JWT token
+    }
+
     function parseJwt(token) {
       const base64Url = token.split('.')[1];
-      const base64 = decodeURIComponent(atob(base64Url).split('').map(c =>
-        '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2)).join(''));
+      const base64 = decodeURIComponent(
+        atob(base64Url)
+          .split('')
+          .map(c => '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2))
+          .join('')
+      );
       return JSON.parse(base64);
     }
   </script>
 </body>
 </html>
+
